--- a/LineChartKNXdata.html
+++ b/LineChartKNXdata.html
@@ -5,7 +5,6 @@
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
   <script type="text/javascript">
-
   	function ShowForm() {
     	var x = document.getElementById("hiddenForm");
    		if (x.style.display === "none") {
@@ -16,6 +15,7 @@
 	}
 
 	function loadGraphs(){
+		console.log("--------------------------------------------------------------------------------------");
 		function clearDivs(){
     		document.getElementById("item2").innerHTML = "";
 			document.getElementById("item4").innerHTML = "";
@@ -132,14 +132,23 @@
 		//Sort variables per unit type
 		function sortUnit(SeriesName, unit, Label, links) {
 			var Type_format, testString1,testString2,index2,index;
+			var roomName=[];
 			//Read user selected unit
 			var unitString = document.getElementById("UnitSelect").value;
+			var roomSelectString = document.getElementById("RoomSelect").value;
 			object.SeriesName = [];
 			object.Label = [];
 			object.link = [];
 			object.ylabel=[];
+			for(k=0; k<Label.length; k++){
+				if (Label[k] !== undefined) {
+					index = Label[k].indexOf(" - ");
+					roomName[k]= Label[k].substr(0, index);
+				}
+			}
+
 			for (i = 0; i < unit.length; i++) {
-				if (unitString=="All"){
+				if (unitString=="All" && roomSelectString=="All"){
 					object.SeriesName.push(SeriesName[i]);
 					object.Label.push(Label[i]);
 					object.link.push(links[i]);
@@ -147,17 +156,15 @@
 						index2 = unit[i].indexOf(" ");
 						ylabel.push(unit[i].substr(index2+1));
 					}
-				}else {
+				//Display all rooms for selected unit
+				}else if(roomSelectString=="All"){
 					//Symbol ° not readable so sort Weather variables using label; "Weather - ..."
 					if (Label[i] !== undefined) {
 						index = Label[i].indexOf(" - ");  // Gets the first index where a space occours
 						testString1 = Label[i].substr(0, index); // Gets the first part
 						testString2 = Label[i].substr(index + 3); 
-						console.log(testString1);
-						console.log(testString2);
 					} 
-
-					if (unit[i] !== undefined && unit[i].toUpperCase() == unitString.toUpperCase()) {
+					if (unit[i] !== undefined && unit[i].toUpperCase()==unitString.toUpperCase()) {
 						object.SeriesName.push(SeriesName[i]);
 						object.Label.push(Label[i]);
 						object.link.push(links[i]);
@@ -171,8 +178,7 @@
 							index2 = unit[i].indexOf(" ");
 							ylabel.push(unit[i].substr(index2+1));
 						}
-					}
-					else if (testString2.toUpperCase() == unitString.toUpperCase()) {
+					}else if (testString2.toUpperCase()==unitString.toUpperCase()) {
 						object.SeriesName.push(SeriesName[i]);
 						object.Label.push(Label[i]);
 						object.link.push(links[i]);
@@ -181,10 +187,52 @@
 							ylabel.push(unit[i].substr(index2+1));
 						}
 					}
+				// Display all units for selected room items
+				}else if(unitString=="All"){
+					if (roomName[i]==roomSelectString) {
+						object.SeriesName.push(SeriesName[i]);
+						object.Label.push(Label[i]);
+						object.link.push(links[i]);
+						index2 = unit[i].indexOf(" ");
+						ylabel.push(unit[i].substr(index2+1));
+					}
+				//Display selected room and unit 
+				}else{
+					if (Label[i] !== undefined) {
+						index = Label[i].indexOf(" - ");  // Gets the first index where a space occours
+						testString1 = Label[i].substr(0, index); // Gets the first part
+						testString2 = Label[i].substr(index + 3); 
+					}
+					if (roomName[i]==roomSelectString) {
+						if(unit[i].toUpperCase()==unitString.toUpperCase() && unit[i]!==undefined){
+							object.SeriesName.push(SeriesName[i]);
+							object.Label.push(Label[i]);
+							object.link.push(links[i]);
+							index2 = unit[i].indexOf(" ");
+							ylabel.push(unit[i].substr(index2+1));	
+						}else if (testString1.toUpperCase()==unitString.toUpperCase()) {
+							object.SeriesName.push(SeriesName[i]);
+							object.Label.push(Label[i]);
+							object.link.push(links[i]);
+							if (unit[i] !== undefined) {
+								index2 = unit[i].indexOf(" ");
+								ylabel.push(unit[i].substr(index2+1));
+							}
+						}else if (testString2.toUpperCase()==unitString.toUpperCase()) {
+							object.SeriesName.push(SeriesName[i]);
+							object.Label.push(Label[i]);
+							object.link.push(links[i]);
+							if (unit[i] !== undefined) {
+								index2 = unit[i].indexOf(" ");
+								ylabel.push(unit[i].substr(index2+1));
+							}
+						}else{
+							console.log("No data for selected room and units");
+						}
+					}
 				}
-
 			}
-			console.log("Selected data: " + object.Label);
+			console.log("Selected Label: " + object.Label);
 			console.log("ylabel: "+ object.ylabel);
 			getData(object.link, object.SeriesName, object.Label,object.ylabel);
 		}
@@ -355,6 +403,65 @@
 			}
 		}
 	}
+
+	loadGraphs();
+
+	//Get Room names from subnet items page
+	var loadhttp;
+	loadhttp = new XMLHttpRequest();
+	loadhttp.onreadystatechange = function() {
+		if (this.readyState == 4 && this.status == 200) {
+			readItems(this);
+		}
+	};
+	loadhttp.open("GET", "/rest/items", true);
+	loadhttp.send();
+	function readItems(doc) {
+		var JsonDoc, i,j, txt, ArrayDoc;
+		var NameUnits = [];
+		var units = [];
+		var LabelUnits = [];
+		var LinkUnits = [];
+		ArrayDoc = doc.responseText;
+		txt = "";
+		JsonDoc = JSON.parse(ArrayDoc);
+		for (var i = 0; i < JsonDoc.length; i++) {
+			if (JsonDoc[i].stateDescription !== undefined) {
+				NameUnits.push(JsonDoc[i].name);
+				units.push(JsonDoc[i].stateDescription.pattern);
+				LabelUnits.push(JsonDoc[i].label);
+				LinkUnits.push(JsonDoc[i].link);
+			} 
+		}
+		var index;
+		var roomString=[];
+		var unitString=[];
+		for (i = 0; i < LabelUnits.length; i++) {
+			if (LabelUnits[i] !== undefined) {
+				index = LabelUnits[i].indexOf(" - ");  // Gets the first index where a space occours
+				roomString[i] = LabelUnits[i].substr(0, index); // Gets the first part				
+    		}	
+		}
+		//Write room and unit label into drop-down
+		var roomStringSort = roomString.sort();
+		var x = document.createElement("OPTION");
+   		x.setAttribute("value", roomString[0]);
+    	var t = document.createTextNode(roomString[0]);
+    	x.appendChild(t);
+    	document.getElementById("RoomSelect").appendChild(x);
+				
+		for (j=1;j<roomString.length;j++){
+			var compare = roomString[j-1]==roomString[j];
+			if(compare==false){
+				var x = document.createElement("OPTION");
+   				x.setAttribute("value", roomString[j]);
+    			var t = document.createTextNode(roomString[j]);
+    			x.appendChild(t);
+    			document.getElementById("RoomSelect").appendChild(x);
+			}
+		}
+		console.log("Loaded Room names");
+	}
 	</script>
 
 </head>
@@ -363,78 +470,76 @@
 
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-		<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
-			<h2> Visualise KNX data </h2>
+			<div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+				<h2> Visualise KNX data </h2>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-right">
+				<button onclick="ShowForm()" class="btn pull-right"><img src="/pics/Palette-btn.png"></button>
+				<form id="hiddenForm" style="display: none">
+					<div class="form-group pull-right" style="width:50%">
+						<select id="ColorSelect" class="form-control" onchange="loadGraphs()">
+							<option value="KNX">Default</option>
+							<option value="red">Red</option>
+							<option value="blue">Blue</option>
+							<option value="green">Green</option>
+						</select>
+					</div>
+				</form>
+			</div>
 		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-right">
-			<button onclick="ShowForm()" class="btn pull-right"><img src="/pics/Palette-btn.png"></button>
-			<form id="hiddenForm" style="display: none">
-				<select id="ColorSelect">
-					<option value="KNX">Default</option>
-						<option value="red">Red</option>
-						<option value="blue">Blue</option>
-						<option value="green">Green</option>
-					</select>
-			</form>
-		</div>
-	</div>
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" >
 				<form>
-					<p>Select room:</p>
-					<select id="RoomSelect">
-						<option value="All">All</option>
-						<option value="%.2f kW">kW</option>
-						<option value="Weather">Weather</option>
-						<option value="%d">Decimal</option>
-						<option value="Thermostat">Thermostat</option>
-						<option value="Volume">Volume</option>
-					</select>
+					<div class="form-group">
+						<p>Select room:</p>
+						<select id="RoomSelect" class="form-control" onchange="loadGraphs()">
+							<option value="All">All</option>
+						</select>
+					</div>
 				</form>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" >
 				<form>
-					<p>Select type:</p>
-					<select id="UnitSelect">
-						<option value="All">All</option>
-						<option value="%.2f kW">kW</option>
-						<option value="Weather">Weather</option>
-						<option value="%d">Decimal</option>
-						<option value="Thermostat">Thermostat</option>
-						<option value="Volume">Volume</option>
-					</select>
+					<div class="form-group">
+						<p>Select type:</p>
+						<select id="UnitSelect" class="form-control" onchange="loadGraphs()">
+							<option value="All">All</option>
+							<option value="%.2f kW">kW</option>
+							<option value="Weather">Weather</option>
+							<option value="%d">Decimal</option>
+							<option value="Thermostat">Thermostat</option>
+							<option value="Volume">Volume</option>
+						</select>
+					</div>
 				</form>
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
 				<form>
-					<p>Select time period:</p>
-					<select id="TimeSelect">
-						<option value="2W">2 Weeks</option>
-						<option value="W"> Week</option>
-						<option value="3D">3 Days</option>
-						<option value="D">1 Day</option>
-						<option value="M">Month</option>
-						<option value="2M">2 Months</option>
-						<option value="4M">4 Months</option>
-						<option value="Y">Year</option>
-						<option value="12h">12 Hours</option>
-						<option value="8h">8 Hours</option>
-						<option value="4h">4 Hours</option>
-						<option value="h">1 Hour</option>
-
+					<div class="form-group">
+						<p>Select period:</p>
+						<select id="TimeSelect" class="form-control" onchange="loadGraphs()">
+							<option value="W"> Week</option>
+							<option value="3D">3 Days</option>
+							<option value="D">1 Day</option>
+							<option value="12h">12 Hours</option>
+							<option value="8h">8 Hours</option>
+							<option value="4h">4 Hours</option>
+							<option value="h">1 Hour</option>
+							<option value="2W">2 Weeks</option>
+							<option value="M">Month</option>
+							<option value="2M">2 Months</option>
+							<option value="4M">4 Months</option>
+							<option value="Y">Year</option>
 					</select>
+				</div>
 				</form>
 			</div>
-			<div class="col-lg-5 col-md-5 col-sm-4 col-xs-4 col-lg-offset-3 col-md-offset-3 ">
-				<br>
-			<button type="button" class="btn btn-outline-primary btn-md btn-block" onclick="loadGraphs()">Submit and Reload</button>
-		</div>
 		</div>
 
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-				<div id="item1"></div>
-				<div id="item3"></div>
+				<div id="item1" style="width:auto"></div>
+				<div id="item3" style="width:auto"></div>
 				<div id="item5"></div>
 				<div id="item7"></div>
 				<div id="item9"></div>
@@ -443,8 +548,8 @@
 				<div id="item15"></div>
 			</div>
 			<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-				<div id="item2"></div>
-				<div id="item4"></div>
+				<div id="item2" style="width:auto"></div>
+				<div id="item4" style="width:auto"></div>
 				<div id="item6"></div>
 				<div id="item8"></div>
 				<div id="item10"></div>
